force-app/main/default/objects/Strategic_Area__c/Strategic_Area__c.object-meta.xml
<CustomObject>
    <label>Strategic Area</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategic Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>