force-app/main/default/objects/Strategic_Area__c/fields/Allocated__c.field-meta.xml
<CustomField>
    <fullName>Allocated__c</fullName>
    <label>Allocated</label>
    <summarizedField>Investment_Area__c.Budget__c</summarizedField>
    <summaryForeignKey>Investment_Area__c.Strategic_Area__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>