force-app/main/default/objects/Strategic_Area__c/fields/Allocated_to_Investment_Areas__c.field-meta.xml
<CustomField>
    <fullName>Allocated_to_Investment_Areas__c</fullName>
    <inlineHelpText>Funding allocated from this Strategic Area to Investment Areas</inlineHelpText>
    <label>Allocated to Investment Areas</label>
    <summarizedField>Funding_Allocation__c.Allocated_to_Investment_Areas__c</summarizedField>
    <summaryForeignKey>Funding_Allocation__c.Strategic_Area__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>