force-app/main/default/objects/Strategic_Area__c/fields/Allocated_to_Strategic_Area__c.field-meta.xml
<CustomField>
    <fullName>Allocated_to_Strategic_Area__c</fullName>
    <inlineHelpText>Funding allocated to this Strategic Area</inlineHelpText>
    <label>Allocated to Strategic Area</label>
    <summarizedField>Funding_Allocation__c.Funding_Amount__c</summarizedField>
    <summaryForeignKey>Funding_Allocation__c.Strategic_Area__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>