force-app/main/default/objects/Strategic_Area__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <label>Approved</label>
    <summarizedField>Investment_Area__c.Approved__c</summarizedField>
    <summaryForeignKey>Investment_Area__c.Strategic_Area__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>