force-app/main/default/objects/Strategic_Area__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <formula>Budget_Old__c - Approved__c - Refunded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>