force-app/main/default/objects/Strategic_Area__c/fields/Available_to_Allocate__c.field-meta.xml
<CustomField>
    <fullName>Available_to_Allocate__c</fullName>
    <formula>Allocated_to_Strategic_Area__c - Allocated_to_Investment_Areas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Funding available to be allocated from this Strategic Area to Investment Areas</inlineHelpText>
    <label>Available to Allocate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>