force-app/main/default/objects/Strategic_Area__c/fields/Committed__c.field-meta.xml
<CustomField>
    <fullName>Committed__c</fullName>
    <label>Committed</label>
    <summarizedField>Investment_Area__c.Committed__c</summarizedField>
    <summaryForeignKey>Investment_Area__c.Strategic_Area__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>