force-app/main/default/objects/Strategic_Area__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sport NZ</fullName>
            </value>
            <value>
                <fullName>High Performance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>