force-app/main/default/objects/Strategic_Area__c/fields/Incomplete_Initiatives__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Initiatives__c</fullName>
    <inlineHelpText>Initiatives related to this Strategic Area, with status other than Closed or Cancelled.</inlineHelpText>
    <label>Incomplete Initiatives</label>
    <summarizedField>Investment_Area__c.Incomplete_Initiatives__c</summarizedField>
    <summaryForeignKey>Investment_Area__c.Strategic_Area__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>