force-app/main/default/objects/Strategic_Area__c/fields/Incomplete_Payments__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Payments__c</fullName>
    <inlineHelpText>Payments related to this Strategic Area, with status of Draft, Scheduled, On Hold, Sent for Payment, or Error.</inlineHelpText>
    <label>Incomplete Payments</label>
    <summarizedField>Investment_Area__c.Incomplete_Payments__c</summarizedField>
    <summaryForeignKey>Investment_Area__c.Strategic_Area__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>