force-app/main/default/objects/Strategic_Area__c/fields/Incomplete_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Requirements__c</fullName>
    <inlineHelpText>Number of requirements related to this Strategic Area with the status of &apos;Pending&apos; or &apos;Overdue&apos;</inlineHelpText>
    <label>Incomplete Requirements</label>
    <summarizedField>Investment_Area__c.Incomplete_Requirements__c</summarizedField>
    <summaryForeignKey>Investment_Area__c.Strategic_Area__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>