force-app/main/default/objects/Strategic_Area__c/fields/Not_Yet_Committed__c.field-meta.xml
<CustomField>
    <fullName>Not_Yet_Committed__c</fullName>
    <label>Not Yet Committed</label>
    <summarizedField>Investment_Area__c.Not_Yet_Committed__c</summarizedField>
    <summaryForeignKey>Investment_Area__c.Strategic_Area__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>