force-app/main/default/objects/Strategic_Area__c/fields/Principles__c.field-meta.xml
<CustomField>
    <fullName>Principles__c</fullName>
    <label>Principles</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>