force-app/main/default/objects/Strategic_Area__c/fields/Priorities__c.field-meta.xml
<CustomField>
    <fullName>Priorities__c</fullName>
    <label>Priorities</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>