force-app/main/default/objects/Strategic_Area__c/fields/Refunded__c.field-meta.xml
<CustomField>
    <fullName>Refunded__c</fullName>
    <label>Refunded</label>
    <summarizedField>Investment_Area__c.Refunded__c</summarizedField>
    <summaryForeignKey>Investment_Area__c.Strategic_Area__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>