force-app/main/default/objects/Strategic_Area__c/listViews/Active.listView-meta.xml
<ListView>
    <fullName>Active</fullName>
    <columns>Entity__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Budget_Old__c</columns>
    <columns>Approved__c</columns>
    <columns>Paid__c</columns>
    <columns>Refunded__c</columns>
    <columns>Scheduled__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft,Active</value>
    </filters>
    <label>Active and Draft</label>
</ListView>