force-app/main/default/objects/Strategic_Area__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Entity__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Budget_Old__c</columns>
    <columns>Approved__c</columns>
    <columns>Paid__c</columns>
    <columns>Refunded__c</columns>
    <columns>Scheduled__c</columns>
    <columns>Available__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>